canadensis_dsdl_frontend/tests/compile_fail/duplicate_fields_union_response/canadensis/DuplicateFieldsUnionResponse.1.0.uavcan


@sealed

---
@union

int32 a
float32 a

@sealed
